# execution_engine

./: .env  .gitignore  Makefile  README.md  benchmark.py  benchmark_results.txt  main.py  pyproject.toml
cpp/: CMakeLists.txt
cpp/bindings/: bindings.cpp
cpp/include/: execution_engine.hpp  feed_handler.hpp  order.hpp
cpp/src/: execution_engine.cpp  feed_handler.cpp
cpp/test/: test_feed_handler.cpp  test_twap.cpp  test_vwap.cpp
ml/: impact_model.py
src/: executor.py  main.py  models.py  utils.py
src/execution_engine/: __init__.py
src/execution_engine/data/: __init__.py  loader.py
src/execution_engine/models/: __init__.py  order.py
src/execution_engine/strategies/: __init__.py  twap.py  vwap.py
src/execution_engine/utils/: __init__.py  logging.py
tests/: bindings_test.py  loader_test.py  main_tests.py  twap_test.py  vwap_test.py
