[project]
name = "execution-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

# RUFF Config
[tool.ruff]
line-length = 100

# include
src = ["src", "tests"]
# exclude
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
# Rules activated
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8 (potential bugs)
    "UP",   # pyupgrade (mordernize code)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ===== PYRIGHT Config =====
[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"

reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

